[package]
name = "lucky-solana-mainnet"
version = "0.1.0"
description = "Lucky Solana Raffle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lucky_solana_mainnet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
